# conjugita

./: Cargo.toml  build.rs
crates/conjugita_types/: Cargo.toml
crates/conjugita_types/src/: lib.rs
src/: lib.rs  main.rs  verbs.ron
