[package]
name = "conjugita"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
clap = { version = "4.5.40", features = ["derive"] }
seal = "0.1.6"
colored = "3.0"
conjugita_types = { path = "crates/conjugita_types" }
bincode = { version = "2.0.1", features = ["serde"] }
multimap = "0.10.1"

[build-dependencies]
conjugita_types = { path = "crates/conjugita_types" }
ron = "0.10.1"
bincode = { version = "2.0.1", features = ["serde"] }
